# AdaptiveSpMM

./: CMakeLists.txt  PLAN.md  README.md  spmm_cpu
data/: README.md
scripts/: bench_full.sbatch  download_data.sh  format_results.py  profile_ncu.sbatch  run.sbatch  thresh_sweep.sbatch
src/: bucket.cu  bucket.cuh  csr.cpp  csr.h  main.cpp  spmm_adaptive.cu  spmm_adaptive.cuh  spmm_cpu.cpp  spmm_cpu.h  spmm_cusparse.cu  spmm_cusparse.cuh  spmm_naive.cu  spmm_naive.cuh  utils.h
